Fix bug where tooltip ended up off screen, improve tick font size

--- a/app/styles/charts.styl
+++ b/app/styles/charts.styl
@@ -78,6 +78,10 @@
   margin-left: .2em;
 }
 
+.rickshaw_graph .y_ticks text, .rickshaw_graph .x_ticks_d3 text {
+  font-size: 16px;
+}
+
 
 /**** Custom D3 Bar chart *****/
 .axis path,
